Closed Bug 1093694 Opened 11 years ago Closed 11 years ago

Driver version mismatch should blacklist any graphics features

Categories

(Core :: Graphics, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
firefox33 + fixed
firefox34 + fixed
firefox35 + fixed
firefox36 + fixed

People

(Reporter: bas.schouten, Assigned: bas.schouten)

Details

Attachments

(1 file)

We're currently blocking an arbitrary bunch of graphics features when there's driver mismatches. We should block all of them since we really have no idea what driver is installed.
Attachment #8516785 - Flags: review?(jmuizelaar) → review+
Jeff, Bas, could you land this patch and ask for the uplift requests? Thanks
Flags: needinfo?(jmuizelaar)
Flags: needinfo?(bas)
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Comment on attachment 8516785 [details] [diff] [review] Don't allow any features when there's a driver version mismatch Approval Request Comment [Feature/regressing bug #]: [User impact if declined]: Some users with driver mismatch fallback to D3D9 even though we don't know if their driver can handle D3D9 propely (due to the fact that we can't tell what driver they have). As a result some user can endup with unsupported configurations such as D2D+D3D9 or D3D9 outside of windows xp. [Describe test coverage new/current, TBPL]: None. [Risks and why]: very low, it gets user with unknown configuration (driver version mismatch) to software rendering which is the safest place they can be. [String/UUID change made/needed]: None.
Attachment #8516785 - Flags: approval-mozilla-release?
Attachment #8516785 - Flags: approval-mozilla-beta?
Attachment #8516785 - Flags: approval-mozilla-aurora?
Attachment #8516785 - Flags: approval-mozilla-release?
Attachment #8516785 - Flags: approval-mozilla-release+
Attachment #8516785 - Flags: approval-mozilla-beta?
Attachment #8516785 - Flags: approval-mozilla-beta+
Attachment #8516785 - Flags: approval-mozilla-aurora?
Attachment #8516785 - Flags: approval-mozilla-aurora+
Flags: needinfo?(jmuizelaar)
Flags: needinfo?(bas)
We need it in GECKO331_2014103013_RELBRANCH too. thanks
Also landed on GECKO330_2014101104_RELBRANCH for 33.0.3: https://hg.mozilla.org/releases/mozilla-release/rev/7311ad1fba8c
This unintentionally blocked all acceleration on Windows XP on Intel hardware.
(In reply to Jeff Muizelaar [:jrmuizel] from comment #8) > This unintentionally blocked all acceleration on Windows XP on Intel > hardware. Which then got "fixed" with bug 1141783.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: