Bug 1093694 - Don't allow any graphics features when there's a driver version mismatch. r=jrmuizel, a=sledru